z-index issue fixed on mobile view

--- a/src/components/MobileMenu/MobileMenu.module.scss
+++ b/src/components/MobileMenu/MobileMenu.module.scss
@@ -31,19 +31,29 @@
   }
 }
 
-
 .overlay {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(6px);
   z-index: 9999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  pointer-events: auto;
 }
 
+
+
+
 .menu {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
   background: var(--background);
   border-radius: 16px;
   width: 90%;
@@ -53,6 +63,7 @@
   flex-direction: column;
   gap: 1.5rem;
 }
+
 
 .header {
   display: flex;
